[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdomain-enum"
version = "0.1.0"
description = "Enumerate subdomains for a given domain."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Victor Salazar" }]
license = { text = "MIT" }
dependencies = ["dnspython>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
subdomain-enum = "subdomain_enum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"subdomain_enum.data" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
